// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Matches the snapshot for a disabled input 1`] = `
<DocumentFragment>
  <div>
    <input
      aria-invalid="false"
      aria-label=""
      aria-required="false"
      autocomplete="off"
      class="TextInput"
      disabled=""
      id="myId"
      name=""
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput Matches the snapshot for a required input 1`] = `
<DocumentFragment>
  <div>
    <input
      aria-invalid="false"
      aria-label=""
      aria-required="true"
      autocomplete="off"
      class="TextInput"
      id="myId"
      name=""
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput Matches the snapshot for an input with an error and a validation message 1`] = `
<DocumentFragment>
  <div>
    <input
      aria-invalid="true"
      aria-label=""
      aria-required="false"
      autocomplete="off"
      class="TextInput error"
      id="myId"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="font-color-danger font-size-sm"
    >
      You silly goose
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput Matches the snapshot for an input with an error but no validation message 1`] = `
<DocumentFragment>
  <div>
    <input
      aria-invalid="true"
      aria-label=""
      aria-required="false"
      autocomplete="off"
      class="TextInput error"
      id="myId"
      name=""
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput Matches the snapshot for component with default props 1`] = `
<DocumentFragment>
  <div>
    <input
      aria-invalid="false"
      aria-label=""
      aria-required="false"
      autocomplete="off"
      class="TextInput"
      id="myId"
      name=""
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
